--- a/about.html
+++ b/about.html
@@ -103,11 +103,10 @@
                                                 <li><a href="#">My Account</a></li>
                                                 <li><a href="#">Log In</a></li>
                                                 <li><a href="#">Register</a></li>
-                                                <li><a href="#">Blog</a></li>
                                             </ul>
                                         </div>
                                         <div class="content"><a href="#"><i class="zmdi zmdi-favorite"></i> Wishlist</a></div>
-                                        <div class="content"><a href="#"><i class="zmdi zmdi-shopping-basket"></i> Chechout</a></div>
+                                        <div class="content"><a href="#"><i class="zmdi zmdi-shopping-basket"></i> Checkout</a></div>
                                     </div>
                                 </div>
                             </div>
@@ -135,7 +134,6 @@
                                                     <li><a href="team.html">Our Team</a>
                                                     </li>
                                                     <li><a href="contact.html">Contact</a></li>
-                                                    <li><a href="#">Blog</a></li>
                                                 </ul>
                                             </nav>
                                         </div>
@@ -309,9 +307,7 @@
                     </div>
                 </div>
                 <!--End of About Area-->
-				<div>
-				 <h1 style = "margin-left:80px"> hello</h1>
-				</div>
+
 				<!--Fun Factor Area Start-->
                 <div class="fun-factor-area" >
                     <div class="container">
@@ -460,7 +456,7 @@
                                         <li><a href="event.html">Event</a></li>
                                         <li><a href="team.html">Our Team</a></li>
                                         <li><a href="contact.html">Contact</a></li>
-                                        <li><a href="blog.html">Blog</a></li>
+                                        
                                     </ul>
                                 </div>
                             </div>
