--- a/contact.html
+++ b/contact.html
@@ -103,11 +103,11 @@
                                                 <li><a href="#">My Account</a></li>
                                                 <li><a href="#">Log In</a></li>
                                                 <li><a href="#">Register</a></li>
-                                                <li><a href="#">Blog</a></li>
+                          
                                             </ul>
                                         </div>
                                         <div class="content"><a href="#"><i class="zmdi zmdi-favorite"></i> Wishlist</a></div>
-                                        <div class="content"><a href="#"><i class="zmdi zmdi-shopping-basket"></i> Chechout</a></div>
+                                        <div class="content"><a href="#"><i class="zmdi zmdi-shopping-basket"></i> Checkout</a></div>
                                     </div>
                                 </div>
                             </div>
@@ -135,7 +135,7 @@
                                                     <li><a href="team.html">Our Team</a>
                                                     </li>
                                                     <li><a href="contact.html">Contact</a></li>
-                                                    <li><a href="#">Blog</a></li>
+                                     
                                                 </ul>
                                             </nav>
                                         </div>
